# docker-tutorial

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
app/: config.py  main.py  pyproject.toml
app/api/: routes.py
app/api/endpoints/: health.py  warrior.py
app/worker/: tasks.py  worker.py
