[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Adam Kielar <adam.kielar@netguru.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
